working on a go stub that is based on swagger
